# src/controllers/index.ts
@@ -1,5 +1,6 @@
+export * as adminController from './admin.controller';
 export * as commentController from './comment.controller';
 export * as postController from './post.controller';
 export * as uploadController from './upload.controller';
 export * as userController from './user.controller';
-export * as adminController from './admin.controller';
+export * as authController from './auth.controller';
